# The-Rust-Programming-Language

./: Cargo.toml  shell.nix
.github/workflows/: common-collections.yml  common-programming-conecpts.yml  enums-and-pattern-matching.yml  error-handling.yml  generics-traits-lifetimes.yml  growing-projects.yml  guessing-game.yml  hello-cargo.yml  hello-world.yml  iterators_and_closures.yml  minigrep.yml  nix.yml  running-automated-tests.yml  structure-related-data.yml  understanding-ownership.yml
common_collections/src/: main.rs
common_programming_concepts/: README.MD
common_programming_concepts/src/: main.rs
enums_and_pattern_matching/src/: main.rs
error_handling/src/: main.rs
generics_traits_lifetimes/src/: article.rs  main.rs
generics_traits_lifetimes/src/article/: articles.rs
growing_projects/: Cargo.toml
growing_projects/src/: garden.rs  main.rs
growing_projects/src/garden/: fruit.rs  vegetable.rs
guessing-game/: Cargo.toml  README.MD
guessing-game/src/: main.rs
guessing_game/: Cargo.toml
hello-cargo/: README.MD
hello-world/: README.MD
iterators_and_closures/src/: main.rs
iterators_and_closures/src/lib/: mod.rs
minigrep/src/: main.rs
running_automated_tests/: Cargo.toml
running_automated_tests/src/: lib.rs
running_automated_tests/src/shape/: mod.rs
structure_related_data/src/: main.rs
understanding_ownership/src/: main.rs
