[workspace]

members = [
    "hello_cargo",
    "hello_world",
    "guessing_game",
    "common_programming_concepts",
    "understanding_ownership",
    "structure_related_data",
    "enums_and_pattern_matching",
    "growing_projects",
    "common_collections",
    "error_handling",
    "generics_traits_lifetimes",
]
